@@ -5,6 +5,10 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2004-03-03 Marc Delisle  <lem9@users.sourceforge.net>
+    * tbl_change.php, tbl_replace_fields.php: bug 907510, invalid
+      escaping of + in ENUM
+
 2004-03-01 Marc Delisle  <lem9@users.sourceforge.net>
     ### 2.5.6 released from branch MAINT_2_5
     * libraries/common.lib.php: change Revision number to trigger execution
